[gd_scene load_steps=17 format=3 uid="uid://bqypk3yyxnd3q"]

[ext_resource type="Script" uid="uid://cvli4v0wsljit" path="res://scripts/enemies/living_bomb.gd" id="1_m3oan"]
[ext_resource type="Texture2D" uid="uid://bl2x6ts2ci3y8" path="res://art/enemies/Explosion.png" id="2_g3eid"]
[ext_resource type="Texture2D" uid="uid://c3otlwwy0euoq" path="res://art/enemies/LivingBomb.png" id="2_m3oan"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m3oan"]
atlas = ExtResource("2_g3eid")
region = Rect2(0, 0, 25, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3eid"]
atlas = ExtResource("2_g3eid")
region = Rect2(25, 0, 25, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_6h0go"]
atlas = ExtResource("2_g3eid")
region = Rect2(50, 0, 25, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3pj7"]
atlas = ExtResource("2_m3oan")
region = Rect2(0, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3yaa"]
atlas = ExtResource("2_m3oan")
region = Rect2(20, 0, 20, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ae8yi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3oan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3eid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h0go")
}],
"loop": false,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3pj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3yaa")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6h0go"]
size = Vector2(12, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_m3oan"]
radius = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m3oan"]
size = Vector2(12, 12)

[sub_resource type="Animation" id="Animation_g3eid"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_6h0go")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ExplosionArea/CollisionShape2D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CircleShape2D_m3oan")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../ExplosionArea/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, 0.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../ContactDamageArea/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../ContactDamageArea/CollisionShape2D:shape")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_m3oan")]
}

[sub_resource type="Animation" id="Animation_ovrdk"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ExplosionArea/CollisionShape2D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CircleShape2D_m3oan")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../ExplosionArea/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_m3oan"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1999, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-2, 1), Vector2(-2, 1), Vector2(2, 1), Vector2(2, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../CollisionShape2D:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_6h0go")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../ContactDamageArea/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1999, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-2, 1), Vector2(-2, 1), Vector2(2, 1), Vector2(2, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../ContactDamageArea/CollisionShape2D:shape")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_m3oan")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g3eid"]
_data = {
&"RESET": SubResource("Animation_g3eid"),
&"death": SubResource("Animation_ovrdk"),
&"run": SubResource("Animation_m3oan")
}

[node name="LivingBomb" type="CharacterBody2D" groups=["enemies"]]
z_index = 1
y_sort_enabled = true
collision_layer = 4
script = ExtResource("1_m3oan")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ae8yi")
animation = &"run"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
&"": SubResource("AnimationLibrary_g3eid")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 1)
shape = SubResource("RectangleShape2D_6h0go")

[node name="RandomTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
position = Vector2(-0.5, 0.5)
shape = SubResource("CircleShape2D_m3oan")

[node name="ContactDamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContactDamageArea"]
position = Vector2(-2, 1)
shape = SubResource("RectangleShape2D_m3oan")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="RandomTimer" to="." method="_on_random_timer_timeout"]
[connection signal="body_entered" from="ExplosionArea" to="." method="_on_explosion_area_body_entered"]
[connection signal="body_entered" from="ContactDamageArea" to="." method="_on_contact_damage_area_body_entered"]
